made seperaitng lines bigger

--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head><title>E-Plaza Bob Ross Event</title></head>
+
+<head>
+  <title>E-Plaza Bob Ross Event</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
 
 <body style="
 height: 2000px;
 margin: 0;
 ">
-<div class="wrapper" style="background-color: #35383E;height: 100%;">
-<marquee behavior="scroll" direction="down" style="height: 61px;margin-top: 50px;background-color: #202124;color: white;font-family: sans-serif;font-size: 50px;" scrollamount="4.5" >
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt ultrices tempus. 
-  <br>Pellentesque ornare sagittis quam. Ut fringilla nibh leo, ut eleifend lorem iaculis sed. 
-  <br>Maecenas cursus porta elit id sollicitudin. Pellentesque condimentum, purus sodales 
-  <br>feugiat rhoncus, eros magna posuere arcu, ut faucibus neque ligula ac leo. 
-  <br>Morbi tempus velit magna, sed posuere leo vulputate convallis. 
-  <br>Donec mollis purus nibh, vel varius eros iaculis nec. 
-  <br>Morbi et leo ut enim lobortis accumsan.
 
 
-
-</marquee>
-</div>
+  <div class="wrapper" style="background-color: #35383E;height: 100%;">
+    <h1>Answers:</h1>
+    <marquee behavior="scroll" direction="down"
+      style="height: 171px;margin-top: 50px;background-color: #202124;color: white;font-family: sans-serif;font-size: 90px;"
+      scrollamount="12">
+      <p>No eyebrows</p>
+      <hr>
+      <p>Origami</p>
+      <hr>
+      <p>Vincent Van Gogh</p>
+      <hr>
+      <p>Itadakimasu</p>
+      <hr>
+      <p>Sailor Moon</p>
+      <hr>
+      <p>Poutine</p>
+      <hr>
+      <p>It's a-me, Mario!</p>
+      <hr>
+      <p>"I'm gonna make him an offer he can't refuse"</p>
+      <hr>
+      <p>A (Gallic) cock</p>
+      <hr>
+      <p>Live free or die!</p>
+      <hr>
+    </marquee>
+  </div>
 </body>
+
 </html>
