Added diff questions to all diff pages

--- a/index2.html
+++ b/index2.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>E-Plaza Bob Ross Event</title>
-  <link rel="stylesheet" href="style.css">
+    <title>E-Plaza Bob Ross Event</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -13,39 +13,48 @@ margin: 0;
 ">
 
 
-  <div class="wrapper" style="background-color: #35383E;height: 100%;">
-    <div class="menu">
-      <a href="index.html">SET 1</a>
-      <a href="index2.html"  style="color: #727272;">SET 2</a>
-      <a href="index3.html">SET 3</a>
-      <a href="index4.html">SET 4</a>
+    <div class="wrapper" style="background-color: #35383E;height: 100%;">
+        <div class="menu">
+            <a href="index.html">SET 1</a>
+            <a href="index2.html" style="color: #727272;">SET 2</a>
+            <a href="index3.html">SET 3</a>
+            <a href="index4.html">SET 4</a>
+        </div>
+        <h1>Answers:</h1>
+        <marquee behavior="scroll" direction="down"
+            style="height: 171px;margin-top: 50px;background-color: #202124;color: white;font-family: sans-serif;font-size: 90px;"
+            scrollamount="12">
+            <p>Anne Hathaway</p>
+            <hr>
+
+            <p>Giraffe</p>
+            <hr>
+
+            <p>One for all, all for one</p>
+            <hr>
+
+            <p>Cow</p>
+            <hr>
+
+            <p>Knives</p>
+            <hr>
+
+            <p>Will you marry me?</p>
+            <hr>
+
+            <p>Spiderman</p>
+            <hr>
+
+            <p>A grandmother</p>
+            <hr>
+
+            <p>A basketball court</p>
+            <hr>
+
+            <p>Tea</p>
+            <hr>
+        </marquee>
     </div>
-    <h1>Answers:</h1>
-    <marquee behavior="scroll" direction="down"
-      style="height: 171px;margin-top: 50px;background-color: #202124;color: white;font-family: sans-serif;font-size: 90px;"
-      scrollamount="12">
-      <p>No eyebrows</p>
-      <hr>
-      <p>Origami</p>
-      <hr>
-      <p>Vincent Van Gogh</p>
-      <hr>
-      <p>Itadakimasu</p>
-      <hr>
-      <p>Sailor Moon</p>
-      <hr>
-      <p>Poutine</p>
-      <hr>
-      <p>It's a-me, Mario!</p>
-      <hr>
-      <p>"I'm gonna make him an offer he can't refuse"</p>
-      <hr>
-      <p>A (Gallic) cock</p>
-      <hr>
-      <p>Live free or die!</p>
-      <hr>
-    </marquee>
-  </div>
 </body>
 
 </html>
