--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@ margin: 0;
 
 
   <div class="wrapper" style="background-color: #35383E;height: 100%;">
+    <div class="menu">
+      <div class="menuWrapper">
+        <a href="index.html" style="color: #727272;">SET 1</a>
+        <a href="index2.html">SET 2</a>
+        <a href="index3.html">SET 3</a>
+        <a href="index4.html">SET 4</a>
+      </div>
+    </div>
     <h1>Answers:</h1>
     <marquee behavior="scroll" direction="down"
       style="height: 171px;margin-top: 50px;background-color: #202124;color: white;font-family: sans-serif;font-size: 90px;"
