--- a/index3.html
+++ b/index3.html
@@ -24,25 +24,25 @@ margin: 0;
     <marquee behavior="scroll" direction="down"
       style="height: 171px;margin-top: 50px;background-color: #202124;color: white;font-family: sans-serif;font-size: 90px;"
       scrollamount="12">
-      <p>No eyebrows</p>
+      <p>Painter</p>
       <hr>
-      <p>Origami</p>
+      <p>Brown</p>
       <hr>
-      <p>Vincent Van Gogh</p>
+      <p>Octagon</p>
       <hr>
-      <p>Itadakimasu</p>
+      <p>Hell</p>
       <hr>
-      <p>Sailor Moon</p>
+      <p>Sperm Whale</p>
       <hr>
-      <p>Poutine</p>
+      <p>A stick</p>
       <hr>
-      <p>It's a-me, Mario!</p>
+      <p>Address</p>
       <hr>
-      <p>"I'm gonna make him an offer he can't refuse"</p>
+      <p>He couldn't see that well</p>
       <hr>
-      <p>A (Gallic) cock</p>
+      <p>To be, or not to be, that is the question</p>
       <hr>
-      <p>Live free or die!</p>
+      <p>Jackpot!!</p>
       <hr>
     </marquee>
   </div>
