--- a/index4.html
+++ b/index4.html
@@ -24,25 +24,25 @@ margin: 0;
     <marquee behavior="scroll" direction="down"
       style="height: 171px;margin-top: 50px;background-color: #202124;color: white;font-family: sans-serif;font-size: 90px;"
       scrollamount="12">
-      <p>No eyebrows</p>
+      <p>Constipation</p>
       <hr>
-      <p>Origami</p>
+      <p>William Shakespeare</p>
       <hr>
-      <p>Vincent Van Gogh</p>
+      <p>Hedwig</p>
       <hr>
-      <p>Itadakimasu</p>
+      <p>Pagophagiacs</p>
       <hr>
-      <p>Sailor Moon</p>
+      <p>Cow dung</p>
       <hr>
-      <p>Poutine</p>
+      <p>Sit down</p>
       <hr>
-      <p>It's a-me, Mario!</p>
+      <p>Fart</p>
       <hr>
-      <p>"I'm gonna make him an offer he can't refuse"</p>
+      <p>Pufferfish</p>
       <hr>
-      <p>A (Gallic) cock</p>
+      <p>An interrobang</p>
       <hr>
-      <p>Live free or die!</p>
+      <p>Yes</p>
       <hr>
     </marquee>
   </div>
